# tauri-media-permission

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
