[package]
name = "media-permission"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/pewsheen/tauri.git", branch = "fix/duplicate-media-permission-prompt", features = [] }

[dependencies]
tauri = { git = "https://github.com/pewsheen/tauri.git", branch = "fix/duplicate-media-permission-prompt", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
